- fix bug #33386 (ScriptControl only sees last function of class): com_wrapper.c - fix bug #37588 (COM Property propputref converts to PHP function   and can't be accesed): com_handlers.c - fix bug #39596 (Creating Variant of type VT_ARRAY): com_variant.c - add tests